public/src/lib/jsonbean/src/jsonbean.js
/**
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
(function () {
    function jsonBean(){
        "use strict";

      /*
 * Generated by PEG.js 0.9.0.
 *
 * http://pegjs.org/
 */

      function peg$subclass(child, parent) {
        function ctor() { this.constructor = child; }
        ctor.prototype = parent.prototype;
        child.prototype = new ctor();
      }

      function peg$SyntaxError(message, expected, found, location) {
        this.message  = message;
        this.expected = expected;
        this.found    = found;
        this.location = location;
        this.name     = "SyntaxError";

        if (typeof Error.captureStackTrace === "function") {
          Error.captureStackTrace(this, peg$SyntaxError);
        }
      }

      peg$subclass(peg$SyntaxError, Error);

      function peg$parse(input) {
        var options = arguments.length > 1 ? arguments[1] : {},
          parser  = this,

          peg$FAILED = {},

          peg$startRuleFunctions = { Start: peg$parseStart },
          peg$startRuleFunction  = peg$parseStart,

          peg$c0 = function(items) {
            var result = {
              name: '',
              description: '',
              attributes: []
            }
            items.forEach(function(item){
              if (item === null) return;
              if (item.class) {
                result.name = item.class
                result.description = item.description
              } else if (item.name) {
                result.attributes.push(item)
              }
            })
            return result
          },
          peg$c1 = function() {
            return "" // ignore
          },
          peg$c2 = ";",
          peg$c3 = { type: "literal", value: ";", description: "\";\"" },
          peg$c4 = function(ct, f, dt, name, arr, dv, cl) {
            if(f){
              return null;
            }
            return {
              name: name.join(''),
              typeName: dt.name,
              isArray: dt.isArray || (arr?true:false),
              defaultValue: dv == null?"":dv,
              description: ct.join('') || cl
            }
          },
          peg$c5 = "public",
          peg$c6 = { type: "literal", value: "public", description: "\"public\"" },
          peg$c7 = "class",
          peg$c8 = { type: "literal", value: "class", description: "\"class\"" },
          peg$c9 = "{",
          peg$c10 = { type: "literal", value: "{", description: "\"{\"" },
          peg$c11 = function(ct, clazz) {
            return {
              description: ct.join(''),
              class: clazz
            }
          },
          peg$c12 = "}",
          peg$c13 = { type: "literal", value: "}", description: "\"}\"" },
          peg$c14 = function() {
            return null
          },
          peg$c15 = function(a) {
            return null
          },
          peg$c16 = "[",
          peg$c17 = { type: "literal", value: "[", description: "\"[\"" },
          peg$c18 = "]",
          peg$c19 = { type: "literal", value: "]", description: "\"]\"" },
          peg$c20 = function(i) {return true;},
          peg$c21 = "List",
          peg$c22 = { type: "literal", value: "List", description: "\"List\"" },
          peg$c23 = "<",
          peg$c24 = { type: "literal", value: "<", description: "\"<\"" },
          peg$c25 = ">",
          peg$c26 = { type: "literal", value: ">", description: "\">\"" },
          peg$c27 = function(w) {
            return {
              name: w,
              isArray: true
            }
          },
          peg$c28 = function(w, arr) {
            return {
              name: w,
              isArray: true
            }
          },
          peg$c29 = function(w) {
            return {
              name: w,
              isArray: false
            }
          },
          peg$c30 = "@",
          peg$c31 = { type: "literal", value: "@", description: "\"@\"" },
          peg$c32 = "private",
          peg$c33 = { type: "literal", value: "private", description: "\"private\"" },
          peg$c34 = "protected",
          peg$c35 = { type: "literal", value: "protected", description: "\"protected\"" },
          peg$c36 = "static",
          peg$c37 = { type: "literal", value: "static", description: "\"static\"" },
          peg$c38 = "final",
          peg$c39 = { type: "literal", value: "final", description: "\"final\"" },
          peg$c40 = "transient",
          peg$c41 = { type: "literal", value: "transient", description: "\"transient\"" },
          peg$c42 = "volatile",
          peg$c43 = { type: "literal", value: "volatile", description: "\"volatile\"" },
          peg$c44 = function(s, f) {
            /*
             如果把一个member定义为final意味着无法改变，此时该member不应导入
             而static则是类的，也不应该导入
             如： 有些时候JavaBean会implements一些interface(如Seriablizable)，就需要定义一个static final long 的serialVersionUID，显然这个member是不应该被导入的
             */
            return f === "final" || s === 'static';
          },
          peg$c45 = "=",
          peg$c46 = { type: "literal", value: "=", description: "\"=\"" },
          peg$c47 = function(d) {
            return d;

          },
          peg$c48 = ",",
          peg$c49 = { type: "literal", value: ",", description: "\",\"" },
          peg$c50 = function(s, ss) {
            var temp = ss.map(function(item){ return item[2];});
            temp.unshift(s);
            return {
              notArray: true,
              value:temp
            };
          },
          peg$c51 = function(v, vv) {
            // 支持一下几种:
            // [1,2,3]
            // [[1,2,3],[4,5,6]]
            // ["test", "it",["a", "test]];  parser中对这种差异性不处理,不进行类型检查。
            if(v.notArray){
              return v.value;
            }else{
              var temp = new Array();
              temp.push(v);
              if(vv.length == 0){
                return temp;
              }else{
                var vvTemp = vv.map(function(item){return item[2]});
                return temp.concat(vvTemp);
              }
            }
          },
          peg$c52 = /^[^;]/,
          peg$c53 = { type: "class", value: "[^;]", description: "[^;]" },
          peg$c54 = function() {
            return "";
          },
          peg$c55 = "//",
          peg$c56 = { type: "literal", value: "//", description: "\"//\"" },
          peg$c57 = function(c) { // 因为都是包在一个java class 中, 所以一定有LB
            return c.join('')
          },
          peg$c58 = function(c) {
            return c
          },
          peg$c59 = /^[\/]/,
          peg$c60 = { type: "class", value: "[/]", description: "[/]" },
          peg$c61 = /^[*]/,
          peg$c62 = { type: "class", value: "[*]", description: "[*]" },
          peg$c63 = "*/",
          peg$c64 = { type: "literal", value: "*/", description: "\"*/\"" },
          peg$c65 = { type: "any", description: "any character" },
          peg$c66 = function(c) {
            var comments = c.map(function(item){
              return item[1]
            }).join('').split('\n')
            var result = []
            comments.forEach(function(comment){
              var trimResult = comment.trim().replace(/^\*+|\*+$/g, '').trim()
              if (trimResult) {
                result.push(trimResult)
              }
            })
            return result.join(', ')
          },
          peg$c67 = "\"",
          peg$c68 = { type: "literal", value: "\"", description: "\"\\\"\"" },
          peg$c69 = /^[^"]/,
          peg$c70 = { type: "class", value: "[^\\\"]", description: "[^\\\"]" },
          peg$c71 = function(s) {
            return s.join('');
          },
          peg$c72 = function(f) {
            return f.map(function(i){ if(i instanceof Array) {return i.join('')} else return i}).join('');
          },
          peg$c73 = /^[0-9]/,
          peg$c74 = { type: "class", value: "[0-9]", description: "[0-9]" },
          peg$c75 = /^[eE]/,
          peg$c76 = { type: "class", value: "[eE]", description: "[eE]" },
          peg$c77 = /^[+\-]/,
          peg$c78 = { type: "class", value: "[+-]", description: "[+-]" },
          peg$c79 = function(e, s, ds) {
            return e + (s==null? "" : s) + ds.join('');
          },
          peg$c80 = ".",
          peg$c81 = { type: "literal", value: ".", description: "\".\"" },
          peg$c82 = function(s, d) {
            return (s=='-' ? -1: 1) * Number(d.join(''));
          },
          peg$c83 = function(l) {
            return l.join('');
          },
          peg$c84 = /^[a-zA-Z0-9]/,
          peg$c85 = { type: "class", value: "[a-zA-Z0-9]", description: "[a-zA-Z0-9]" },
          peg$c86 = { type: "other", description: "Whitespace" },
          peg$c87 = /^[ \t]/,
          peg$c88 = { type: "class", value: "[ \\t]", description: "[ \\t]" },
          peg$c89 = { type: "other", description: "Zero or more whitespaces" },
          peg$c90 = { type: "other", description: "One or more whitespaces" },
          peg$c91 = /^[\r\n]/,
          peg$c92 = { type: "class", value: "[\\r\\n]", description: "[\\r\\n]" },
          peg$c93 = /^[^;{]/,
          peg$c94 = { type: "class", value: "[^;{]", description: "[^;{]" },
          peg$c95 = /^[^\r\n]/,
          peg$c96 = { type: "class", value: "[^\\r\\n]", description: "[^\\r\\n]" },

          peg$currPos          = 0,
          peg$savedPos         = 0,
          peg$posDetailsCache  = [{ line: 1, column: 1, seenCR: false }],
          peg$maxFailPos       = 0,
          peg$maxFailExpected  = [],
          peg$silentFails      = 0,

          peg$result;

        if ("startRule" in options) {
          if (!(options.startRule in peg$startRuleFunctions)) {
            throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
          }

          peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
        }

        function text() {
          return input.substring(peg$savedPos, peg$currPos);
        }

        function location() {
          return peg$computeLocation(peg$savedPos, peg$currPos);
        }

        function expected(description) {
          throw peg$buildException(
            null,
            [{ type: "other", description: description }],
            input.substring(peg$savedPos, peg$currPos),
            peg$computeLocation(peg$savedPos, peg$currPos)
          );
        }

        function error(message) {
          throw peg$buildException(
            message,
            null,
            input.substring(peg$savedPos, peg$currPos),
            peg$computeLocation(peg$savedPos, peg$currPos)
          );
        }

        function peg$computePosDetails(pos) {
          var details = peg$posDetailsCache[pos],
            p, ch;

          if (details) {
            return details;
          } else {
            p = pos - 1;
            while (!peg$posDetailsCache[p]) {
              p--;
            }

            details = peg$posDetailsCache[p];
            details = {
              line:   details.line,
              column: details.column,
              seenCR: details.seenCR
            };

            while (p < pos) {
              ch = input.charAt(p);
              if (ch === "\n") {
                if (!details.seenCR) { details.line++; }
                details.column = 1;
                details.seenCR = false;
              } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
                details.line++;
                details.column = 1;
                details.seenCR = true;
              } else {
                details.column++;
                details.seenCR = false;
              }

              p++;
            }

            peg$posDetailsCache[pos] = details;
            return details;
          }
        }

        function peg$computeLocation(startPos, endPos) {
          var startPosDetails = peg$computePosDetails(startPos),
            endPosDetails   = peg$computePosDetails(endPos);

          return {
            start: {
              offset: startPos,
              line:   startPosDetails.line,
              column: startPosDetails.column
            },
            end: {
              offset: endPos,
              line:   endPosDetails.line,
              column: endPosDetails.column
            }
          };
        }

        function peg$fail(expected) {
          if (peg$currPos < peg$maxFailPos) { return; }

          if (peg$currPos > peg$maxFailPos) {
            peg$maxFailPos = peg$currPos;
            peg$maxFailExpected = [];
          }

          peg$maxFailExpected.push(expected);
        }

        function peg$buildException(message, expected, found, location) {
          function cleanupExpected(expected) {
            var i = 1;

            expected.sort(function(a, b) {
              if (a.description < b.description) {
                return -1;
              } else if (a.description > b.description) {
                return 1;
              } else {
                return 0;
              }
            });

            while (i < expected.length) {
              if (expected[i - 1] === expected[i]) {
                expected.splice(i, 1);
              } else {
                i++;
              }
            }
          }

          function buildMessage(expected, found) {
            function stringEscape(s) {
              function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

              return s
                .replace(/\\/g,   '\\\\')
                .replace(/"/g,    '\\"')
                .replace(/\x08/g, '\\b')
                .replace(/\t/g,   '\\t')
                .replace(/\n/g,   '\\n')
                .replace(/\f/g,   '\\f')
                .replace(/\r/g,   '\\r')
                .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
                .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
                .replace(/[\u0100-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
                .replace(/[\u1000-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
            }

            var expectedDescs = new Array(expected.length),
              expectedDesc, foundDesc, i;

            for (i = 0; i < expected.length; i++) {
              expectedDescs[i] = expected[i].description;
            }

            expectedDesc = expected.length > 1
              ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
              : expectedDescs[0];

            foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

            return "Expected " + expectedDesc + " but " + foundDesc + " found.";
          }

          if (expected !== null) {
            cleanupExpected(expected);
          }

          return new peg$SyntaxError(
            message !== null ? message : buildMessage(expected, found),
            expected,
            found,
            location
          );
        }

        function peg$parseStart() {
          var s0, s1, s2;

          s0 = peg$currPos;
          s1 = [];
          s2 = peg$parseStatement();
          if (s2 !== peg$FAILED) {
            while (s2 !== peg$FAILED) {
              s1.push(s2);
              s2 = peg$parseStatement();
            }
          } else {
            s1 = peg$FAILED;
          }
          if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c0(s1);
          }
          s0 = s1;

          return s0;
        }

        function peg$parseCommentOrLB() {
          var s0, s1, s2;

          s0 = peg$parseComment();
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = [];
            s2 = peg$parseLB();
            if (s2 !== peg$FAILED) {
              while (s2 !== peg$FAILED) {
                s1.push(s2);
                s2 = peg$parseLB();
              }
            } else {
              s1 = peg$FAILED;
            }
            if (s1 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c1();
            }
            s0 = s1;
          }

          return s0;
        }

        function peg$parseStatement() {
          var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15, s16;

          s0 = peg$currPos;
          s1 = peg$parse_();
          if (s1 !== peg$FAILED) {
            s2 = [];
            s3 = peg$parseComment();
            while (s3 !== peg$FAILED) {
              s2.push(s3);
              s3 = peg$parseComment();
            }
            if (s2 !== peg$FAILED) {
              s3 = peg$parse_();
              if (s3 !== peg$FAILED) {
                s4 = peg$parseMarkerAnnotation();
                if (s4 === peg$FAILED) {
                  s4 = null;
                }
                if (s4 !== peg$FAILED) {
                  s5 = peg$parse_();
                  if (s5 !== peg$FAILED) {
                    s6 = peg$parseFieldModifiers();
                    if (s6 !== peg$FAILED) {
                      s7 = peg$parse__();
                      if (s7 !== peg$FAILED) {
                        s8 = peg$parseDataType();
                        if (s8 !== peg$FAILED) {
                          s9 = peg$parse__();
                          if (s9 !== peg$FAILED) {
                            s10 = [];
                            s11 = peg$parseCharacter();
                            if (s11 !== peg$FAILED) {
                              while (s11 !== peg$FAILED) {
                                s10.push(s11);
                                s11 = peg$parseCharacter();
                              }
                            } else {
                              s10 = peg$FAILED;
                            }
                            if (s10 !== peg$FAILED) {
                              s11 = peg$parse_();
                              if (s11 !== peg$FAILED) {
                                s12 = peg$parseTraditionalArray();
                                if (s12 === peg$FAILED) {
                                  s12 = null;
                                }
                                if (s12 !== peg$FAILED) {
                                  s13 = peg$parseDefaultValueAssign();
                                  if (s13 === peg$FAILED) {
                                    s13 = null;
                                  }
                                  if (s13 !== peg$FAILED) {
                                    if (input.charCodeAt(peg$currPos) === 59) {
                                      s14 = peg$c2;
                                      peg$currPos++;
                                    } else {
                                      s14 = peg$FAILED;
                                      if (peg$silentFails === 0) { peg$fail(peg$c3); }
                                    }
                                    if (s14 !== peg$FAILED) {
                                      s15 = peg$parse_();
                                      if (s15 !== peg$FAILED) {
                                        s16 = peg$parseCommentOrLB();
                                        if (s16 !== peg$FAILED) {
                                          peg$savedPos = s0;
                                          s1 = peg$c4(s2, s6, s8, s10, s12, s13, s16);
                                          s0 = s1;
                                        } else {
                                          peg$currPos = s0;
                                          s0 = peg$FAILED;
                                        }
                                      } else {
                                        peg$currPos = s0;
                                        s0 = peg$FAILED;
                                      }
                                    } else {
                                      peg$currPos = s0;
                                      s0 = peg$FAILED;
                                    }
                                  } else {
                                    peg$currPos = s0;
                                    s0 = peg$FAILED;
                                  }
                                } else {
                                  peg$currPos = s0;
                                  s0 = peg$FAILED;
                                }
                              } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                              }
                            } else {
                              peg$currPos = s0;
                              s0 = peg$FAILED;
                            }
                          } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = [];
            s2 = peg$parseComment();
            while (s2 !== peg$FAILED) {
              s1.push(s2);
              s2 = peg$parseComment();
            }
            if (s1 !== peg$FAILED) {
              s2 = peg$parse_();
              if (s2 !== peg$FAILED) {
                s3 = peg$parseMarkerAnnotation();
                if (s3 === peg$FAILED) {
                  s3 = null;
                }
                if (s3 !== peg$FAILED) {
                  s4 = peg$parse_();
                  if (s4 !== peg$FAILED) {
                    if (input.substr(peg$currPos, 6) === peg$c5) {
                      s5 = peg$c5;
                      peg$currPos += 6;
                    } else {
                      s5 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c6); }
                    }
                    if (s5 !== peg$FAILED) {
                      s6 = peg$parse__();
                      if (s6 !== peg$FAILED) {
                        if (input.substr(peg$currPos, 5) === peg$c7) {
                          s7 = peg$c7;
                          peg$currPos += 5;
                        } else {
                          s7 = peg$FAILED;
                          if (peg$silentFails === 0) { peg$fail(peg$c8); }
                        }
                        if (s7 !== peg$FAILED) {
                          s8 = peg$parse__();
                          if (s8 !== peg$FAILED) {
                            s9 = peg$parseWord();
                            if (s9 !== peg$FAILED) {
                              s10 = peg$parseAnyWithoutTerminator();
                              if (s10 !== peg$FAILED) {
                                if (input.charCodeAt(peg$currPos) === 123) {
                                  s11 = peg$c9;
                                  peg$currPos++;
                                } else {
                                  s11 = peg$FAILED;
                                  if (peg$silentFails === 0) { peg$fail(peg$c10); }
                                }
                                if (s11 !== peg$FAILED) {
                                  s12 = [];
                                  s13 = peg$parseLB();
                                  while (s13 !== peg$FAILED) {
                                    s12.push(s13);
                                    s13 = peg$parseLB();
                                  }
                                  if (s12 !== peg$FAILED) {
                                    peg$savedPos = s0;
                                    s1 = peg$c11(s1, s9);
                                    s0 = s1;
                                  } else {
                                    peg$currPos = s0;
                                    s0 = peg$FAILED;
                                  }
                                } else {
                                  peg$currPos = s0;
                                  s0 = peg$FAILED;
                                }
                              } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                              }
                            } else {
                              peg$currPos = s0;
                              s0 = peg$FAILED;
                            }
                          } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
            if (s0 === peg$FAILED) {
              s0 = peg$currPos;
              s1 = peg$parse_();
              if (s1 !== peg$FAILED) {
                if (input.charCodeAt(peg$currPos) === 125) {
                  s2 = peg$c12;
                  peg$currPos++;
                } else {
                  s2 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c13); }
                }
                if (s2 !== peg$FAILED) {
                  s3 = peg$parse_();
                  if (s3 !== peg$FAILED) {
                    s4 = [];
                    s5 = peg$parseLB();
                    while (s5 !== peg$FAILED) {
                      s4.push(s5);
                      s5 = peg$parseLB();
                    }
                    if (s4 !== peg$FAILED) {
                      peg$savedPos = s0;
                      s1 = peg$c14();
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
              if (s0 === peg$FAILED) {
                s0 = peg$currPos;
                s1 = peg$parseAnyWithoutLB();
                if (s1 !== peg$FAILED) {
                  s2 = [];
                  s3 = peg$parseLB();
                  if (s3 !== peg$FAILED) {
                    while (s3 !== peg$FAILED) {
                      s2.push(s3);
                      s3 = peg$parseLB();
                    }
                  } else {
                    s2 = peg$FAILED;
                  }
                  if (s2 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c15(s1);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              }
            }
          }

          return s0;
        }

        function peg$parseTraditionalArray() {
          var s0, s1, s2, s3, s4, s5;

          s0 = peg$currPos;
          if (input.charCodeAt(peg$currPos) === 91) {
            s1 = peg$c16;
            peg$currPos++;
          } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c17); }
          }
          if (s1 !== peg$FAILED) {
            s2 = peg$parse_();
            if (s2 !== peg$FAILED) {
              s3 = peg$parseInterger();
              if (s3 === peg$FAILED) {
                s3 = null;
              }
              if (s3 !== peg$FAILED) {
                s4 = peg$parse_();
                if (s4 !== peg$FAILED) {
                  if (input.charCodeAt(peg$currPos) === 93) {
                    s5 = peg$c18;
                    peg$currPos++;
                  } else {
                    s5 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c19); }
                  }
                  if (s5 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c20(s3);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }

          return s0;
        }

        function peg$parseDataType() {
          var s0, s1, s2, s3, s4, s5, s6;

          s0 = peg$currPos;
          if (input.substr(peg$currPos, 4) === peg$c21) {
            s1 = peg$c21;
            peg$currPos += 4;
          } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c22); }
          }
          if (s1 !== peg$FAILED) {
            s2 = peg$parse_();
            if (s2 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 60) {
                s3 = peg$c23;
                peg$currPos++;
              } else {
                s3 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c24); }
              }
              if (s3 !== peg$FAILED) {
                s4 = peg$parseWord();
                if (s4 !== peg$FAILED) {
                  s5 = peg$parse_();
                  if (s5 !== peg$FAILED) {
                    if (input.charCodeAt(peg$currPos) === 62) {
                      s6 = peg$c25;
                      peg$currPos++;
                    } else {
                      s6 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c26); }
                    }
                    if (s6 !== peg$FAILED) {
                      peg$savedPos = s0;
                      s1 = peg$c27(s4);
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = peg$parseWord();
            if (s1 !== peg$FAILED) {
              s2 = peg$parseTraditionalArray();
              if (s2 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c28(s1, s2);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
            if (s0 === peg$FAILED) {
              s0 = peg$currPos;
              s1 = peg$parseWord();
              if (s1 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c29(s1);
              }
              s0 = s1;
            }
          }

          return s0;
        }

        function peg$parseMarkerAnnotation() {
          var s0, s1, s2, s3, s4, s5, s6;

          s0 = peg$currPos;
          s1 = peg$parse_();
          if (s1 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 64) {
              s2 = peg$c30;
              peg$currPos++;
            } else {
              s2 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c31); }
            }
            if (s2 !== peg$FAILED) {
              s3 = peg$parseAnyWithoutLB();
              if (s3 !== peg$FAILED) {
                s4 = peg$parse_();
                if (s4 !== peg$FAILED) {
                  s5 = [];
                  s6 = peg$parseLB();
                  while (s6 !== peg$FAILED) {
                    s5.push(s6);
                    s6 = peg$parseLB();
                  }
                  if (s5 !== peg$FAILED) {
                    s1 = [s1, s2, s3, s4, s5];
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }

          return s0;
        }

        function peg$parseDataTypeModifier() {
          var s0;
